--- a/src/style/_genre.scss
+++ b/src/style/_genre.scss
@@ -21,4 +21,7 @@
      @media screen and (max-width: 614px){
         grid-template-columns: repeat(3,1fr);
     }
+    @media screen and (max-width: 480px){
+        grid-template-columns: repeat(2,1fr);
+    }
 }
