--- a/src/style/_movieinfo.scss
+++ b/src/style/_movieinfo.scss
@@ -83,6 +83,9 @@
         .genre_title {
             margin-top: 18px;
         }
+        .movie__info__text{
+            text-align: justify;
+        }
 
     }
 
