--- a/src/style/_person.scss
+++ b/src/style/_person.scss
@@ -39,6 +39,10 @@
             }
            
         }
+        .person__biography{
+            text-align: justify;
+            text-justify: inter-word;
+        }
     }
 }
 .person__movies{
